adding role functionality